todo update for 2018

--- a/todo.txt
+++ b/todo.txt
@@ -1,78 +1,61 @@
-iplug-todo
+WDL-OL/IPlug2 TODOs:
 
+ALL - document all main interface headers with decent doxygen comments, remove random comments from source code this
+ALL - bring disparate documentation together into doxygen pages
+
+IPlug:
+
+ALL - IParam improvements e.g. using lambdas for custom readout ranges
+ALL - cmake support
+ALL - templated processor class for single/double precision and WAM support
 ALL - make side chain/multi-channel definitions more consistent and more flexible, i.e. mono or stereo SC
-ALL - lock free-ness
 ALL - GetHostVersionStr() etc are not reliable, especially with AU
+AU - preset changing from inside the plugin doesn't consistently update logic's GUI
+AU - auval "preset name not retained" message
+AU - SendMidiMsg() not implemented
+AU - possibility of instruments with multichannel output, e.g. 5.1
+AU - possibility of instruments with side-chain inputs
+VST3 - SendMidiMsg()
+VST3 - pitch bend & other common MIDI CC parameters
+AAX - "continuous" gui controls linked to enumerated list parameters jump around
+AAX - multi-mono with PLUG_DOES_STATE_CHUNKS 1 doesn't sync instances
+AAX - auxiliary output stems for instruments with multiple outs
+AAX - SendMidiMsg/s
+APP - edit to use IPlugBase buffer attaching code
+APP - some keys not received by windows standalone...arrow keys for example DLGC_WANTARROWS
+APP - how to change audio devices without hanging the main loop?
+APP - fade out audio stream when changing settings?
+APP - make it work with no audio input & look at PLUG_IS_INST
+APP - make it work with variable i/o count
+APP - make it work with non-gui plugins
+APP - transport & tempo generator
+APP - missing functions in IPlugStandalone.h
+APP - windows midi - sendmidimsg() crash
+APP - windows midi - MS Built in GS Synth crashes when selected in prefs (XP)
+APP - state persistence - save fxp & option
+APP - look again at JACK client osx
+APP - get latency and display
+APP - remove per plug-in wrapper, replace with global code
+
+IGraphics:
+
+ALL - IKeyboardControl should be made vectorial by default and included in IControls
+ALL - add a few common IControls
+ALL - resizing/arbitrary rescaling of the entire ui
+ALL - reliable window sizing
+ALL - better drag-and-drop
+ALL - animation
+ALL - hashing of static data wrong
+ALL - fps/performance benchmarking
 ALL - more flexible resource importing (not just png resources)
 ALL - improve text entry dimensions / text size
-ALL - freetype based font renderer, import .ttf files
-ALL - drag & drop area
-ALL - OS tooltips?
-ALL - carbon non-composited text entry
-ALL - carbon non-composited doesn't just draw the dirty area of the GUI, it always redraws the entire GUI
-ALL - Sysex?
-
-Examples:
-
-- IPlugPolySynth - needs improvement
-- IPlugDrumSynth
-- IPlugMultiChannel - standalone app doesn't work, due to stereo limitation
-- IPlugOpenGL - drawing not implemented on win
-- IPlugControls - some controls not finished
-- IPlugEEL - not finished
-
-AU wrapper:
-
-- preset changing from inside the plugin doesn't consistently update logic's GUI
-- auval "preset name not retained" message
-- SendMidiMsg() not implemented
-- possibility of instruments with multichannel output, e.g. 5.1
-- possibility of instruments with side-chain inputs
-
-VST3 wrapper:
-
-- SendMidiMsg()
-- pitch bend & other common MIDI CC parameters
-
-RTAS wrapper:
-
-- "continuous" gui controls linked to enumerated list parameters jump around
-- multi-mono with PLUG_DOES_STATE_CHUNKS 1 doesn't sync instances (likely PT issue)
-- auxiliary output stems for instruments with multiple outs
-- keycatcher doesn't work (OSX)
-- text entries disabled (OSX)
-- audiosuite
-- presets list
-- close session frozen buffer (only happens when debugging?)
-- SendMidiMsg/s
-
-AAX wrapper:
-
-- "continuous" gui controls linked to enumerated list parameters jump around
-- multi-mono with PLUG_DOES_STATE_CHUNKS 1 doesn't sync instances
-- auxiliary output stems for instruments with multiple outs
-- SendMidiMsg/s
-
-Standalone wrapper:
-
-- edit to use IPlugBase buffer attaching code
-- some keys not received by windows standalone...arrow keys for example DLGC_WANTARROWS
-- how to change audio devices without hanging the main loop?
-- fade out audio stream when changing settings?
-- make it work with no audio input & look at PLUG_IS_INST
-- make it work with variable i/o count
-- make it work with non-gui plugins
-- transport & tempo generator
-- missing functions in IPlugStandalone.h
-- windows midi - sendmidimsg() crash
-- windows midi - MS Built in GS Synth crashes when selected in prefs (XP)
-- state persistence - save fxp & option
-- look again at JACK client osx
-- get latency and display
-- improve MIDI output timing (portmidi instead of RTMidi?)
-
-IOS wrapper:
-
-- edit to use IPlugBase buffer attaching code
-- make it work better on device
-- see if it works with IOS 5 sdk / float remoteIO
+IGraphicsLice - text dimensions on retina/non-retina different for non-monospaced fonts
+IGraphicsLice - replace LICE text with freetype/stbtruetype?
+IGraphicsCairo - text
+IGraphicsAGG - text
+IGraphicsAGG - svg
+IGraphicsAGG - scaling
+IGraphicsAGG - strict/non strict mode not working
+IGraphicsNanoVG - text
+IGraphicsNanoVG - svg
+IGraphicsNanoVG - currently redrawing controls that are not dirty
